<resources>
    <string name="app_name">DesiIlaaz</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_display_remedy">DisplayRemedyActivity</string>


    <string name="acidity">Acidity</string>
    <string name="acne">Acne</string>
    <string name="blackheads">Blackheads</string>
    <string name="cold">Common Cold</string>
    <string name="constipation">Constipation</string>
    <string name="cough">Cough</string>
    <string name="dandruff">Dandruff</string>
    <string name="diarrhoea">Diarrhoea</string>
    <string name="dehydration">Dehydration</string>
    <string name="fever">Fever</string>
    <string name="flu">Flu</string>
    <string name="hair_loss">Hair Loss</string>
    <string name="migraine">Migraine</string>
    <string name="nausea">Nausea</string>
    <string name="tired_eyes">Tired Eyes</string>
    <string name="vomiting">Vomiting</string>


    <string name="button_send">Send</string>
    <string name="title_activity_display_message">My Message</string>
    <string name="title_activity_display_ailments">DisplayAilmentsActivity</string>


    <string-array name="list">
        <item>Item 1</item>
        <item>Item 2</item>
        <item>Item 3</item>
        <item>Item 4</item>
        <item>Item 5</item>
    </string-array>

</resources>
