<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <ListView
        android:id="@+id/listView1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:entries="@array/list"
        android:layout_centerHorizontal="true" >
    </ListView>


    <Button
        android:id="@+id/acidity"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:text="@string/acidity"
        android:onClick="showInfoOnClick"
        />

    <Button
        android:id="@+id/acne"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:text="@string/acne"
        android:onClick="showInfoOnClick"
        />

    <Button
        android:id="@+id/blackheads"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:text="@string/blackheads"
        android:onClick="showInfoOnClick"
        />

    <Button
        android:id="@+id/cold"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:text="@string/cold"
        android:onClick="showInfoOnClick"
        />

    <Button
        android:id="@+id/constipation"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:text="@string/constipation"
        android:onClick="showInfoOnClick"
        />


    <Button
        android:id="@+id/cough"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:text="@string/cough"
        android:onClick="showInfoOnClick"
        />


    <Button
        android:id="@+id/dandruff"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:text="@string/dandruff"
        android:onClick="showInfoOnClick"
        />

    <Button
        android:id="@+id/diarrhoea"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:text="@string/diarrhoea"
        android:onClick="showInfoOnClick"
        />

    <Button
        android:id="@+id/dehydration"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:text="@string/dehydration"
        android:onClick="showInfoOnClick"
        />

    <Button
        android:id="@+id/flu"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:text="@string/flu"
        android:onClick="showInfoOnClick"
        />

    <Button
        android:id="@+id/fever"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:text="@string/fever"
        android:onClick="showInfoOnClick"
        />


    <Button
        android:id="@+id/hair_loss"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:text="@string/hair_loss"
        android:onClick="showInfoOnClick"
        />

    <Button
        android:id="@+id/migraine"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:text="@string/migraine"
        android:onClick="showInfoOnClick"
        />


    <Button
        android:id="@+id/nausea"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:text="@string/nausea"
        android:onClick="showInfoOnClick"
        />

    <Button
        android:id="@+id/tired_eyes"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:text="@string/tired_eyes"
        android:onClick="showInfoOnClick"
        />

    <Button
        android:id="@+id/vomiting"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:text="@string/vomiting"
        android:onClick="showInfoOnClick"
        />






</LinearLayout>